first integration of launcher, packagemanager and usermanager; lazy loading of pages; responsive drawer button;

--- a/dependencies.html
+++ b/dependencies.html
@@ -1,5 +1,7 @@
-
 <link rel="import" href="bower_components/polymer/polymer-element.html"/>
+
+<link rel="import" href="bower_components/polymer/lib/utils/import-href.html"/>
+
 <link rel="import" href="bower_components/paper-styles/color.html"/>
 <link rel="import" href="bower_components/paper-styles/typography.html"/>
 <link rel="import" href="bower_components/app-layout/app-drawer-layout/app-drawer-layout.html"/>
@@ -12,6 +14,12 @@
 <link rel="import" href="bower_components/iron-icons/social-icons.html"/>
 <link rel="import" href="bower_components/iron-icon/iron-icon.html"/>
 <link rel="import" href="bower_components/iron-icons/iron-icons.html"/>
+<link rel="import" href="bower_components/iron-ajax/iron-ajax.html"/>
+
+<!--<link rel="import" href="bower_components/iron-meta/iron-meta.html"/>-->
+<link rel="import" href="bower_components/iron-pages/iron-pages.html"/>
+<link rel="import" href="bower_components/iron-lazy-pages/iron-lazy-pages.html"/>
+
 <link rel="import" href="bower_components/paper-item/paper-item.html"/>
 <link rel="import" href="bower_components/paper-material/paper-material.html"/>
 <link rel="import" href="bower_components/paper-dialog/paper-dialog.html"/>
@@ -23,8 +31,9 @@
 
 <link rel="import" href="existdb-dashboard.html"/>
 <link rel="import" href="existdb-settings.html"/>
-<link rel="import" href="bower_components/existdb-usermanager/dependencies.html"/>
-<link rel="import" href="bower_components/existdb-packagemanager/dependencies.html"/>
+<!--<link rel="import" href="bower_components/existdb-usermanager/dependencies.html"/>-->
+<!--<link rel="import" href="bower_components/existdb-packagemanager/dependencies.html"/>-->
+<!--<link rel="import" href="bower_components/existdb-launcher/dependencies.html"/>-->
 
 <!--<link rel="import" href="existdb-launcher.html"/>-->
 <!--<link rel="import" href="existdb-dashboard-app.html"/>-->
@@ -33,10 +42,6 @@
 
 
 
-<!-- ### still need to 'merge' dependencies from used apps in this case existdb-packageservice - there must be a better way. ### -->
-<!-- ### Just importing the dependencies from used app leads to error with duplicate loading of polymer-element class. ### -->
-<link rel="import" href="bower_components/iron-ajax/iron-ajax.html"/>
 <!--<link rel="import" href="../existdb-packageservice/existdb-app-details.html"/>-->
 
 
-<link rel="import" href="existdb-settings.html"/>
