--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="import" href="dependencies.html"/>
 </head>
 <body>
+    <iron-meta id="meta" key="env" value="launcher"></iron-meta>
     <existdb-dashboard class="grid"> </existdb-dashboard>
 </body>
 </html>
