--- a/dependencies.html
+++ b/dependencies.html
@@ -21,8 +21,11 @@
 <link rel="import" href="bower_components/iron-lazy-pages/iron-lazy-pages.html"/>
 
 <link rel="import" href="bower_components/paper-item/paper-item.html"/>
+<link rel="import" href="bower_components/paper-input/paper-input.html"/>
 <link rel="import" href="bower_components/paper-material/paper-material.html"/>
 <link rel="import" href="bower_components/paper-dialog/paper-dialog.html"/>
+<link rel="import" href="bower_components/paper-card/paper-card.html"/>
+
 
 <!-- ### routing ### -->
 <link rel="import" href="bower_components/app-route/app-location.html">
