unified header colors

--- a/existdb-dashboard.html
+++ b/existdb-dashboard.html
@@ -69,7 +69,7 @@ an application bundling all admin apps in one place.
                 margin-right: 20px;
 
             }
-            app-drawer img{
+            paper-item img{
                 margin-right: 20px;
             }
 
@@ -82,9 +82,9 @@ an application bundling all admin apps in one place.
             }
 
             .subitem {
-                font-weight: 700;
+                font-weight: 300;
                 font-size: larger;
-                letter-spacing: 1.5px;
+                letter-spacing: 4.5px;
             }
 
             h1 {
