--- a/existdb-settings.html
+++ b/existdb-settings.html
@@ -31,7 +31,8 @@
 
 
       app-header {
-        background: rgb(0, 136, 204);
+        /*background: rgb(0, 136, 204);*/
+        background: var(--paper-blue-500);
         padding: 0px;
         color: white;
         height: 60px;
