removed badges in packagemanager; externalized styles into existdb-styles; moved version information to settings page

--- a/dependencies.html
+++ b/dependencies.html
@@ -34,6 +34,7 @@
 
 <link rel="import" href="existdb-dashboard.html"/>
 <link rel="import" href="existdb-settings.html"/>
+<link rel="import" href="existdb-styles.html"/>
 <!--<link rel="import" href="bower_components/existdb-usermanager/dependencies.html"/>-->
 <!--<link rel="import" href="bower_components/existdb-packagemanager/dependencies.html"/>-->
 <!--<link rel="import" href="bower_components/existdb-launcher/dependencies.html"/>-->
