--- a/guest.html
+++ b/guest.html
@@ -7,12 +7,10 @@
 
     <link rel="stylesheet" href="resources/styles.css"/>
     <script src="bower_components/webcomponentsjs/webcomponents-loader.js"></script>
-    <link rel="import" href="dependencies.html"/>
+    <link rel="import" href="bower_components/existdb-launcher/dependencies.html"/>
 
 </head>
 <body>
-    <existdb-launcher class="grid">
-        <existdb-local-packages> </existdb-local-packages>
-    </existdb-launcher>
+    <existdb-launcher-app class="grid"></existdb-launcher-app>
 </body>
 </html>
