--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <link rel="stylesheet" href="resources/styles.css"/>
     <script src="bower_components/webcomponentsjs/webcomponents-loader.js"></script>
     <link rel="import" href="dependencies.html"/>
+    <link rel="import" href="bower_components/existdb-launcher/dependencies.html"/>
 </head>
 <body>
-    <iron-meta id="meta" key="env" value="launcher"></iron-meta>
-    <existdb-dashboard class="grid"> </existdb-dashboard>
+    <existdb-launcher-app> </existdb-launcher-app>
 </body>
 </html>
